--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Akronim&family=Work+Sans:wght@300&display=swap');
+@import '~antd/dist/antd.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/*custom scrollbar */
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+::-webkit-scrollbar-track {
+  background: #f5f5f5;
+}
+::-webkit-scrollbar-thumb {
+  background: rgb(118, 40, 166);
+  border-radius: 10rem;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(190, 40, 115);
+}
+
+
 html,
 body {
   padding: 0;
   margin: 0;
+  background-color: rgb(33, 33, 33);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -13,4 +36,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.sansWork {
+  font-family: 'Work Sans', sans-serif;
 }
