--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,6 +27,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -53,5 +54,3 @@ a {
   overflow-y: auto;
   border-radius: 1rem
 }
-
-
