--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,10 +27,12 @@ html,
 body {
   padding: 0;
   margin: 0;
-  height: 100%;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
 
 a {
   color: inherit;
